actually using the repo

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,13 @@
-
-
+<!DOCTYPE html>
+<html>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+</head>
+<body>
+    <form>
+        <textarea id="textarea"></textarea>
+        <input type="submit" value="Submit">
+    </form>
+    <script src="client.js"></script>
+</body>
+</html>
