--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -4,10 +4,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
-    <form>
-        <textarea id="textarea"></textarea>
-        <input type="submit" value="Submit">
+    <form method="POST" action="/upload_json"></form>>
+        <textarea id="textarea">placeholder</textarea>
+        <input type="submit" value="Submit" id="submit">
     </form>
-    <script src="client.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
