--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
-    <form method="POST" action="/upload_json"></form>>
+    <form method="POST" action="/upload_json"></form>
         <textarea id="textarea">placeholder</textarea>
         <input type="submit" value="Submit" id="submit">
     </form>
