sending data as first key in an object

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -4,8 +4,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
-    <form method="POST" action="/upload_json"></form>
-        <textarea id="textarea">placeholder</textarea>
+    <form></form>
+        <textarea id="textarea" name="textarea">placeholder</textarea>
         <input type="submit" value="Submit" id="submit">
     </form>
     <script src="app.js"></script>
