--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -4,10 +4,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
-    <form></form>
-        <textarea id="textarea" name="textarea">placeholder</textarea>
+    <form>
+        <textarea id="somedata" name="somedata"></textarea>
         <input type="submit" value="Submit" id="submit">
     </form>
+    <div id="csvData"></div>
     <script src="app.js"></script>
 </body>
 </html>
