--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -6,10 +6,9 @@
 </head>
 <body>
     <div id="app">
-
+        loading
     </div>
-    <script src="react.development.js"></script>
-    <script src="react-dom.development.js"></script>
+
     <script src="app.js"></script>
 </body>
 </html>
